syntax = "proto3";

package pb;

import "token/token.proto";

option go_package = "github.com/Streamfair/streamfair_token_svc/pb/token";

message VerifyTokenRequest {
    string token = 1;
}

message VerifyTokenResponse {
    Token token = 1;
}
